# SRIBEESonline-Backend

./: .env.example  .gitignore  BACKEND_PLAN.md  DEPLOYMENT.md  Dockerfile  FASTAPI_MIGRATION_PLAN.md  Jenkinsfile  MIGRATION_CHECKLIST.md  README.md  SEMANTIC_SEARCH_DESIGN.md  docker-compose.prod.yml  docker-compose.yml  project_proposel  pyproject.toml  requirements.txt
.github/workflows/: deploy-backend-ec2.yml  deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  admin.py  admin_analytics.py  admin_auth.py  admin_branches.py  admin_catalog.py  admin_coupons.py  admin_inventory.py  admin_locations.py  admin_orders.py  admin_settings.py  (+20 more)
app/config/: __init__.py  database.py  redis.py  settings.py
app/core/: __init__.py  dependencies.py  exceptions.py  media.py  rate_limiter.py  security.py  security_headers.py  validators.py
app/models/: __init__.py  admin.py  app_settings.py  branch.py  category.py  coupon.py  notification.py  order.py  product.py  review.py  user.py  wallet.py  wishlist.py
app/schemas/: __init__.py  address.py  admin_auth.py  app_settings.py  auth.py  branch.py  cart.py  category.py  coupon.py  inventory.py  notification.py  order.py  payment.py  product.py  review.py  semantic_search.py  wallet.py
app/services/: __init__.py  admin_auth_service.py  app_settings_service.py  audit_service.py  auth_service.py  branch_service.py  cart_service.py  cart_sync_service.py  category_service.py  coupon_service.py  embedding_service.py  fcm_service.py  invoice_service.py  notification_service.py  order_service.py  otp_service.py  payment_service.py  pricing_service.py  product_review_service.py  product_service.py  review_service.py  search_service.py  semantic_search_service.py  storage_service.py  wallet_service.py  wishlist_service.py
app/utils/: __init__.py  logger.py
docker/: ec2-docker-compose.yml
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DATABASE_SPECIFICATION.md  EPICS.md  FEATURES.md  FINAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  LOCAL_DEV_SETUP.md  MONOREPO_README.md  USER_STORIES.md  USER_STORIES_BREAKDOWN.md
migrations/: 011_branch_inventory_stock_fields.sql  011_create_post_office_branch_mapping.sql  012_add_product_discount_and_branch_fields.sql  012_orders_branch_id.sql  013_coupons.sql  013_create_branch_inventory.sql  014_create_app_settings.sql  014_push_token_device_id.sql  015_create_wallet_tables.sql  015_order_returns.sql  016_address_contact_fields.sql  017_user_phone_verified.sql  018_post_office_directory.sql  019_subcategories_and_branch_price.sql  020_category_image_url.sql  run_migration_011.py  seed_branch_mappings.py  seed_splash_video.py
scripts/: setup.sh
(+6 files in other folders)
